fix projects on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header{
     max-width: 1200px;
     margin: 0;
-    padding: 15px;
+    padding: 15px 40px;
     margin-left: auto;
     margin-right: 25px;
     width: 100%;
