--- a/src/components/Mobile/List/MobileList.module.scss
+++ b/src/components/Mobile/List/MobileList.module.scss
@@ -1,17 +1,16 @@
 .projects{
+
+    display: none;
+    opacity: 0;
+
+    @media (max-width: 930px) {
+    opacity: 1;    
     padding: 75px 40px;
-    max-width: 1400px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-
-    @media (max-width: 930px) {
-        display: none;
-        opacity: 0;
-    }
-
 
     h2{
         padding-bottom: 60px;
@@ -26,4 +25,7 @@
     justify-content: center;
     gap: 150px;
     }
+        
+    }
+    
 }
