--- a/src/components/Mobile/Project/MobileProject.module.scss
+++ b/src/components/Mobile/Project/MobileProject.module.scss
@@ -1,30 +1,18 @@
-.project{
+.MobileProject{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
-
-    @media (max-width: 930px) {
-        display: none;
-        opacity: 0;
-    }
-
     .wrapper{
-        max-width: 600px;
+        max-width: 80%;
         transition: 0.3s;
         border-radius: 20px;
         max-height: 400px;
-
+        padding-top: 20px;
         &:hover{
             box-shadow: 1px 1px 18px 4px;
 
-
         }
     
-        @media (max-width: 1080px) {
-            max-width: 450px;
-        }
 
     .image{
         display: block;
@@ -39,18 +27,10 @@
     }
     }
     .text{
-        max-width: 400px;
-      
+        text-align: center;
+        max-width: 80%;
     }
 
-    .textRight{
-        text-align: right;
-    }
-
-    .textLeft{
-        text-align: left;
-    
-    }
 
     .heading{
         font-size: 22px;
@@ -71,5 +51,6 @@
     .features{
         font-size: 16px;
         font-style: oblique;
+        padding-bottom: 20px;
     }
 }
