--- a/src/sections/Skills/Skills.module.scss
+++ b/src/sections/Skills/Skills.module.scss
@@ -1,11 +1,10 @@
 .skills{
-    padding-top: 75px;
+    padding: 75px 40px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding-bottom: 75px;
 
     h2{
         text-align: center;
